<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:contentDescription=""
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.virgendelsoterrano.elpimi.amigoinvisible.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:text="@string/tv_nombreapp"
                android:id="@+id/tituloapp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:background="@drawable/mis_botones"
                android:shadowColor="#0A4018"
                android:shadowDx="2"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:gravity="center_vertical|center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/imageView"
                android:src="@drawable/fondoamigos"
                android:contentDescription="@string/fondoamigos"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fecha"
                android:id="@+id/tvinfo"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:textColor="#8d3333"
                android:singleLine="false"
                android:background="#faf2e0"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Autor"
                android:id="@+id/textView3"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="@string/tv_introducedatos"
                android:id="@+id/textView6"
                android:textAlignment="center"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/amigos"
                android:text="@string/amigos"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/mis_botones"
                android:shadowColor="#A8A8A8"
                android:shadowDx="2"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:layout_margin="4dp" />

            <Button
                android:id="@+id/generar"
                android:text="@string/generar"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/mis_botones"
                android:shadowColor="#A8A8A8"
                android:shadowDx="2"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:layout_margin="4dp" />

            <Button
                android:text="@string/Siguiente"
                android:id="@+id/button2"
                android:textColor="#d7dded"
                android:layout_marginBottom="44dp"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/mis_botones"
                android:shadowColor="#A8A8A8"
                android:shadowDx="2"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:layout_margin="4dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
